--- a/content/post/2020-05-10-Gratitude.Rmd
+++ b/content/post/2020-05-10-Gratitude.Rmd
@@ -11,7 +11,7 @@ description: ""
 knitr::opts_chunk$set(collapse = TRUE)
 ```
 
-### Author: Ed Orlando
+Author: Ed Orlando
 
 First, I want to give a shout out to the team at **[White Lodging](<https://www.whitelodging.com/>)**.  Our team leader **[Adam Hutsler](<https://www.linkedin.com/in/adam-hutsler-a9104038/>)** and Business Intelligence Manager **[Max Thomas](<https://www.linkedin.com/in/max-thomas-917291a1/>)** are always coming up with creative ways to solve complex problems and create business value using **[Tableau](<https://www.tableau.com/>)** and **[R](<https://rstudio.com/>)**.  I also want to thank former Business Intelligence team members, **[Alex Williams](<https://www.linkedin.com/in/alex-williams-2b63854b/>)** and **[Troy Hill](<https://www.linkedin.com/in/onetroyhill/>)** for their encouragement and advice throughout the years.
 
